--- a/public/styles.css
+++ b/public/styles.css
@@ -234,9 +234,7 @@ tbody tr td:first-child span {
     width: 48px;
     height: 48px;
     background-position: center;
-    background-size: cover;
-    border-radius: 50%;
-    box-shadow: 3px 1px 6px -4px black;
+    background-size: cover;<button class="submit"></button>4px black;
     border: 2px solid white;
 }
 
@@ -261,3 +259,33 @@ tbody tr td:last-child a, .table-container > a {
 
 }
 
+/* FILTERS */
+
+.table-container .header {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    margin-bottom: 32px;
+}
+.table-container .header a {
+    margin: 0;
+    width: 120px;
+}
+
+.table-container .header form {
+    display: grid;
+    grid-template-columns: 1fr 120px;
+    align-items: center;
+    grid-gap: 8px;
+}
+
+.table-container .header form input{
+    border: 1px solid #eee;
+    padding: 4px 8px;
+    box-sizing: border-box;
+    
+}
+
+.table-container .header form button {
+    margin: 0;
+}
