--- a/src/app/views/instructors/index.njk
+++ b/src/app/views/instructors/index.njk
@@ -2,12 +2,22 @@
 
 {% block content %}
    <div class="cards table-container">
-      <a href="/instructors/create">Novo</a>
+
+      <div class="header">
+         <a class="button" href="/instructors/create">Novo</a>
+         <form action="/instructors" method="GET">
+            <input type="text" name="filter" placeholder="Nome ou Atendimento" value="{{filter}}">
+            <button type="submit">Filtrar</button>
+         </form>
+      
+      </div>
+
       <table width="100%">
          <thead>
             <tr>
                <th>Instrutor</th>
                <th>Atendimento</th>
+               <th>Alunos</th>
                <th>Ação</th>
 
             </tr>
@@ -24,6 +34,8 @@
                </td>
                   
                <td>{{instructor.services}}</td>
+               <td>{{instructor.total_students}}</td>
+
                <td> <a href="/instructors/{{instructor.id}}">Ver</a></td>
 
             </tr>
