--- a/src/app/views/members/show.njk
+++ b/src/app/views/members/show.njk
@@ -42,9 +42,14 @@
          <div>{{member.weight}}</div>            
       </div>
 
-       <div class="item">
+      <div class="item">
          <div>Altura (Cm)</div>
          <div>{{member.height}}</div>            
+      </div>
+
+      <div class="item">
+         <div>Aluno de</div>
+         <div>{{member.instructor_name}}</div>            
       </div>
 
       <a class="button" href="/members/{{member.id}}/edit">Editar</a>      
